hphp/hack/test/typecheck/this_tparam_bad2.php.exp
File "this_tparam_bad2.php", line 26, characters 12-15:
Invalid argument (Typing[4110])
File "this_tparam_bad2.php", line 26, characters 12-15:
  where '<expr#336>' is a reference to this expression
File "this_tparam_bad2.php", line 14, characters 36-39:
This is the expression dependent type <expr#336>
  that is compatible with an object of type Foo
File "this_tparam_bad2.php", line 18, characters 33-35:
It is incompatible with an object of type Foo
File "this_tparam_bad2.php", line 20, characters 15-17:
Since Foo is not final
File "this_tparam_bad2.php", line 14, characters 36-39:
this might not be a Foo
